[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "all-all-contributors"
dynamic = ["version"]
description = 'Combine all contributors from across a GitHub organisation'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = []
classifiers = []
dependencies = [
    "jsonschema",
    "requests",
    "responses",  # Testing dependencies
]

[project.urls]
Documentation = "https://github.com/RayStick/all-all-contributors#readme"
Issues = "https://github.com/RayStick/all-all-contributors/issues"
Source = "https://github.com/RayStick/all-all-contributors"

[tool.hatch.version]
path = "all_all_contributors/__about__.py"

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest>=8.3.5",
]

[tool.hatch.envs.test.scripts]
test = "python -m pytest {args:} ./tests"

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--color=yes",
    "--import-mode=importlib",
]
